--- a/src/app/core/dialogs/menu-dialog/menu.component.scss
+++ b/src/app/core/dialogs/menu-dialog/menu.component.scss
@@ -75,7 +75,7 @@ $light-grey1: #F8F8F8;
     margin: 0;
     display: inline-block;
     width: 100%;
-    margin-top: 10px;
+    margin-top: 40px;
 
     &,
     &:hover,
